develop enviroment setup finished
