# api/gin/docs/swagger.yaml
@@ -1,5 +1,5 @@
 definitions:
-  roles.Role:
+  github_com_deva-labs_univia_api_gin_src_modules_role_models.Role:
     properties:
       createdAt:
         type: string
@@ -10,19 +10,48 @@ definitions:
       updatedAt:
         type: string
     type: object
-  routes.HealthResponse:
+  github_com_deva-labs_univia_api_gin_src_modules_user_models.User:
+    properties:
+      createdAt:
+        type: string
+      email:
+        type: string
+      googleID:
+        type: string
+      id:
+        type: string
+      password:
+        type: string
+      phoneNumber:
+        type: integer
+      role:
+        allOf:
+        - $ref: '#/definitions/github_com_deva-labs_univia_api_gin_src_modules_role_models.Role'
+        description: Foreign key to Role
+      roleID:
+        type: string
+      status:
+        type: boolean
+      twitterID:
+        type: string
+      updatedAt:
+        type: string
+      username:
+        type: string
+    type: object
+  src_routes.HealthResponse:
     properties:
       status:
         example: ok
         type: string
     type: object
-  routes.ReadySuccessResponse:
+  src_routes.ReadySuccessResponse:
     properties:
       status:
         example: ok
         type: string
     type: object
-  routes.ReadyUnavailableResponse:
+  src_routes.ReadyUnavailableResponse:
     properties:
       status:
         example: unavailable
@@ -352,35 +381,6 @@ definitions:
         example: ties.node@outlook.com
         type: string
     type: object
-  users.User:
-    properties:
-      createdAt:
-        type: string
-      email:
-        type: string
-      googleID:
-        type: string
-      id:
-        type: string
-      password:
-        type: string
-      phoneNumber:
-        type: integer
-      role:
-        allOf:
-        - $ref: '#/definitions/roles.Role'
-        description: Foreign key to Role
-      roleID:
-        type: string
-      status:
-        type: boolean
-      twitterID:
-        type: string
-      updatedAt:
-        type: string
-      username:
-        type: string
-    type: object
 info:
   contact: {}
 paths:
@@ -412,6 +412,36 @@ paths:
           schema:
             $ref: '#/definitions/types.StatusInternalError'
       summary: Change Password
+      tags:
+      - Authentication
+  /api/v1/auth/confirm-forgot-password:
+    post:
+      consumes:
+      - application/json
+      description: handles the verification code process
+      parameters:
+      - description: Verify Code
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/types.VerifyCodeRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Tokens response
+          schema:
+            $ref: '#/definitions/types.SuccessVerifyCodeResponse'
+        "400":
+          description: Invalid Input
+          schema:
+            $ref: '#/definitions/types.StatusBadRequest'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/types.StatusInternalError'
+      summary: Verify the code
       tags:
       - Authentication
   /api/v1/auth/forgot-password:
@@ -571,7 +601,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/users.User'
+          $ref: '#/definitions/github_com_deva-labs_univia_api_gin_src_modules_user_models.User'
       produces:
       - application/json
       responses:
@@ -582,7 +612,7 @@ paths:
             - $ref: '#/definitions/types.SuccessResponse'
             - properties:
                 data:
-                  $ref: '#/definitions/users.User'
+                  $ref: '#/definitions/github_com_deva-labs_univia_api_gin_src_modules_user_models.User'
                 status:
                   $ref: '#/definitions/types.StatusOK'
               type: object
@@ -648,7 +678,7 @@ paths:
             - $ref: '#/definitions/types.SuccessResponse'
             - properties:
                 data:
-                  $ref: '#/definitions/users.User'
+                  $ref: '#/definitions/github_com_deva-labs_univia_api_gin_src_modules_user_models.User'
                 status:
                   $ref: '#/definitions/types.StatusOK'
               type: object
@@ -1270,7 +1300,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/routes.HealthResponse'
+            $ref: '#/definitions/src_routes.HealthResponse'
       summary: Healthz
       tags:
       - Health Check
@@ -1282,11 +1312,11 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/routes.ReadySuccessResponse'
+            $ref: '#/definitions/src_routes.ReadySuccessResponse'
         "503":
           description: Service Unavailable
           schema:
-            $ref: '#/definitions/routes.ReadyUnavailableResponse'
+            $ref: '#/definitions/src_routes.ReadyUnavailableResponse'
       summary: Readyz
       tags:
       - Health Check
